Fixes #575 by adding a z-index that edge needs

--- a/src/components/Tabs/Tabs.less
+++ b/src/components/Tabs/Tabs.less
@@ -63,8 +63,11 @@
 		& + * {
 			border-left-width: 0;
 		}
-		.lucid-Tabs-Tab-arrow{
+		.lucid-Tabs-Tab-arrow {
 			z-index: 1;
+			.lucid-Tabs-Tab-arrow-svg {
+				z-index: 1;
+			}
 			.lucid-Tabs-Tab-arrow-line {
 				stroke: @color-borderColor;
 			}
